<resources>
    <string name="app_name">SuperHeroes</string>
    <string name="picture_of_the_hero">Picture of the hero</string>
    <string name="hero_name">Hero Name</string>
    <string name="hero_occupation">Hero Occupation</string>
    <string name="hero_powerstats">Hero Powerstats</string>
    <string name="hero_biography">Hero Biography</string>
    <string name="hero_appearance">Hero Appearance</string>
    <string name="hero_work">Hero Work</string>
    <string name="error_api">Oops, error when trying to call Superhero API…</string>
    <string name="hero_image">Hero image</string>
    <string name="title_main">Super Heroes</string>
    <string name="nav_header_subtitle">nav_header_subtitle</string>
    <string name="nav_header_title">nav_header_title</string>
    <string name="nav_header_img">nav_header_img</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="listes">Listes</string>
    <string name="grilles">Grilles</string>
    <string name="action_settings">action_settings</string>
</resources>
