<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginTop="5dp"
    android:padding="8dp"
    android:background="@color/background">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:background="@drawable/loading_shape"
        android:id="@+id/thumbnail"
        android:contentDescription="@string/picture_of_the_hero" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hero_name"
            android:text="@string/hero_name"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hero_occupation"
            android:id="@+id/hero_occupation"
            android:layout_marginTop="15dp"/>

    </LinearLayout>

</LinearLayout>