<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.HeroActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:id="@+id/appbar_layout">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/collapsing_toolbar"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:title="Hero Name"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                android:theme="@style/ThemeOverlay.AppCompat.Light">
            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="50dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/loading_shape"
                    android:id="@+id/detail_thumbnail"
                    android:contentDescription="@string/picture_of_the_hero" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:orientation="vertical"
                    android:layout_margin="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/detail_hero_name"
                        android:text="@string/hero_name"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_marginTop="15dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hero_occupation"
                        android:id="@+id/detail_hero_occupation"
                        android:layout_marginTop="15dp"/>

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="16dp">

        <TextView
            android:text="@string/hero_powerstats"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/detail_powerstats" />

        <TextView
            android:text="@string/hero_biography"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/detail_biography" />

        <TextView
            android:text="@string/hero_appearance"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/detail_appearance" />

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>